Remove width and fix mobile height covering whole screen

--- a/src/web/src/App.css
+++ b/src/web/src/App.css
@@ -153,4 +153,7 @@ img.emoji {
     text-align: left;
     flex-grow: 0;
   }
+  .Chat {
+    height: 350px;
+  }
 }
