--- a/src/web/src/index.css
+++ b/src/web/src/index.css
@@ -1,4 +1,3 @@
 #root-chat {
-  width: 600px;
   margin-bottom: 32px;
 }
